Archive2/51/1337ec45757243/output
main.cpp:1:8: error: 'g_myVal' does not name a type
 extern g_myVal;
        ^
