Archive2/51/1337ec45757243/main.cpp
extern g_myVal;
int g_myVal = 0;